@@ -6,6 +6,9 @@ stated differently.
 
 version 1.00:
 
+	Improvements:
+	- add bugtracker to meta
+
 version 0.96: Fri 12 Sep 14:01:16 CEST 2025
 
 	Improvements:
